--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,48 @@
-requests>=2.31.0
-psycopg2-binary>=2.9.9
-python-dotenv>=1.0.0
+annotated-types==0.7.0
+anyio==4.12.0
+appdirs==1.4.4
+attrs==25.4.0
+beautifulsoup4==4.14.3
+bs4==0.0.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+cssselect==1.3.0
+distro==1.9.0
+fake-useragent==2.2.0
+greenlet==3.3.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+importlib_metadata==8.7.0
+jiter==0.12.0
+lxml==6.0.2
+openai==2.11.0
+outcome==1.3.0.post0
+parse==1.20.2
+playwright==1.57.0
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyee==13.0.0
+pyppeteer==2.0.0
+pyquery==2.0.1
+PySocks==1.7.1
+python-dotenv==1.2.1
+requests==2.32.5
+requests-html==0.10.0
+selenium==4.39.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.8
+tqdm==4.67.1
+trio==0.32.0
+trio-websocket==0.12.2
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==1.26.20
+w3lib==2.3.1
+websocket-client==1.9.0
+websockets==10.4
+wsproto==1.3.2
+zipp==3.23.0
