--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,13 @@ beautifulsoup4==4.14.3
 bs4==0.0.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
+contourpy==1.3.3
 cssselect==1.3.0
+cycler==0.12.1
 distro==1.9.0
+et_xmlfile==2.0.0
 fake-useragent==2.2.0
+fonttools==4.61.1
 greenlet==3.3.0
 h11==0.16.0
 httpcore==1.0.9
@@ -16,22 +20,34 @@ httpx==0.28.1
 idna==3.11
 importlib_metadata==8.7.0
 jiter==0.12.0
+kiwisolver==1.4.9
 lxml==6.0.2
+matplotlib==3.10.8
+matplotlib-venn==1.1.2
+networkx==3.6
+numpy==2.3.5
 openai==2.11.0
+openpyxl==3.1.5
 outcome==1.3.0.post0
+packaging==25.0
 parse==1.20.2
+pillow==12.0.0
 playwright==1.57.0
 psycopg2-binary==2.9.11
 pydantic==2.12.5
 pydantic_core==2.41.5
 pyee==13.0.0
+pyparsing==3.2.5
 pyppeteer==2.0.0
 pyquery==2.0.1
 PySocks==1.7.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 requests==2.32.5
 requests-html==0.10.0
+scipy==1.16.3
 selenium==4.39.0
+six==1.17.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.8
